prepared repository for moving